[package]
name = "org-tangle-engine"
version = "0.1.4"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
repository = "https://github.com/parsing-tech/org-rs"
description = """
A faster way to tangle org-mode.
- the engine of the commend line tool.
"""
license = "GPL-3.0"

[dependencies]
