[package]
name = "org-tangle"
version = "0.1.1"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
repository = "https://github.com/xieyuheng/org-rs"
edition = "2018"
description = """
A faster way to tangle org-mode.
"""
license = "GPL-3.0"

[dependencies]
org-parser = { version = "0.1", path = "../org-parser" }
clap                   = "2"