[package]
name = "org-tangle"
version = "0.1.3"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
repository = "https://github.com/xieyuheng/org-rs"
description = """
A faster way to tangle org-mode.
"""
license = "GPL-3.0"

[dependencies]
org-tangle-engine = { version = "0.1", path = "../org-tangle-engine" }
clap = "2"